--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,15 @@
 {
-  "version": 2,
-  "builds": [{ "src": "app.js", "use": "@vercel/node" }],
-  "routes": [
-    {
-      "src": "/store",
-      "dest": "/routes/index.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.js"
-    }
-  ]
-}
+    "version": 2,
+    "builds": [{ "src": "app.js", "use": "@vercel/node" }],
+    "routes": [
+      {
+        "src": "/store",
+        "dest": "/routes/index.js"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/app.js"
+      }
+    ]
+  }
+  
