--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,10 @@
         "src": "/(.*)",
         "dest": "/app.js"
       }
+    ],
+    "rewrites": [
+      { "source": "/store", "destination": "/routes/index.js" },
+      { "source": "/(.*)", "destination": "/app.js" }
     ]
   }
   
